--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,20 +11,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CalendarAppTrial"
         tools:targetApi="31">
+
+        <!-- Add this activity declaration for activity_list_view -->
+        <activity
+            android:name=".activity_list_view"
+            android:exported="false" />
+
         <activity
             android:name=".activity_event_edit"
             android:exported="false" />
+
         <activity
             android:name=".activity_week_view"
             android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
