--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,32 +12,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CalendarAppTrial"
         tools:targetApi="31">
-
+        <activity
+            android:name=".assignment_list"
+            android:exported="false" />
         <!-- Add this activity declaration for activity_list_view -->
         <activity
             android:name=".activity_list_view"
             android:exported="false" />
-
-        <activity android:name=".class_action_view"
+        <activity
+            android:name=".class_action_view"
             android:exported="false" />
-
         <activity
             android:name=".activity_event_edit"
             android:exported="false" />
-
         <activity
             android:name=".activity_week_view"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
