--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CalendarAppTrial"
-<<<<<<< Updated upstream
-        tools:targetApi="31">
+        android:theme="@style/Theme.CalendarAppTrial" >
+        <!-- Add this activity declaration for activity_list_view -->
         <activity
             android:name=".assignment_list"
             android:exported="false" />
-=======
-        tools:targetApi="31" >
->>>>>>> Stashed changes
-        <!-- Add this activity declaration for activity_list_view -->
         <activity
             android:name=".activity_list_view"
             android:exported="false" />
@@ -34,11 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-<<<<<<< Updated upstream
             android:exported="true">
-=======
-            android:exported="true" >
->>>>>>> Stashed changes
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
